Workshop ready. All code verified

--- a/Exoplanet_Workshop/Exoplanet_Workshop_Activites/Activity_1_Kepler22/find_kepler22b.ipynb
+++ b/Exoplanet_Workshop/Exoplanet_Workshop_Activites/Activity_1_Kepler22/find_kepler22b.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "# 🌍 ACTIVITY 1: KEPLER-22B DETECTIVE\")\n",
+    "# Run the cells one by one. \n",
     "\n",
     "# MISSION:\n",
     "#• Find and analyze Kepler-22b\n",
