--- a/Exoplanet_Workshop/Exoplanet_Workshop_Activites/Activity_2_Trappist_System/find_innermost_planets.ipynb
+++ b/Exoplanet_Workshop/Exoplanet_Workshop_Activites/Activity_2_Trappist_System/find_innermost_planets.ipynb
@@ -10,7 +10,7 @@
     "# 📋 Instructions\n",
     "\n",
     "# DO NOT RUN ALL CELLS AT ONCE!\n",
-    "# Wait for your instructor's signal before proceeding to each new section.\n",
+    "# Wait for your instructor's signal before proceeding to new sections. \n",
     "# This notebook guides you through discovering exoplanets step-by-step."
    ]
   },
@@ -33,7 +33,7 @@
     "mission = TRAPPISTMission()\n",
     "\n",
     "print(\"✅ Mission tools loaded! You are now a TRAPPIST-1 detective.\")\n",
-    "print(\"   The mission: Find two hidden planets orbiting TRAPPIST-1\")\n",
+    "print(\"   The mission: Find two innermost planets orbiting TRAPPIST-1\")\n",
     "print(\"   This star has 7 Earth-sized planets - find the innermost two!\")"
    ]
   },
@@ -119,7 +119,9 @@
     "# Now try your own guesses! What periods might work?\n",
     "# try_period(_____)  # Fill in your guess!\n",
     "\n",
-    "try_period(1.51)\n",
+    "# try_period(2)\n",
+    "# try_period(2.5)\n",
+    "# try_period(3.0)\n",
     "\n",
     "print(\"Do you observe the other periodic pattern of the other planet in the folded data?\")\n"
    ]
@@ -136,21 +138,30 @@
     "print(\"\\nScientists often start with educated guesses...\")\n",
     "\n",
     "# Find the first planet\n",
-    "mission.step2_fold_first_planet()\n",
+    "# mission.step2_\n",
     "\n",
     "# See how scientists remove one planet to find others (not strickly neccessary)\n",
-    "#mission.step3_remove_planet()\n",
+    "#mission.step3_\n",
     "\n",
     "print(\"\\nNow search in the 'cleaned' data...\")\n",
     "print(\"Try the same experiment technique with different periods!\")\n",
     "\n",
     "# Try finding the second planet\n",
-    "mission.step4_find_second_planet()\n",
-    "\n",
-    "# Wrap up the mission\n",
-    "\n",
-    "mission.step5_conclusion()\n",
+    "# mission.step4_\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b80d86a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Wrap up the mission. \n",
+    "# Wait to receive code for this part. \n",
+    "\n",
+    "mission.step5_conclusion()"
    ]
   },
   {
